tests/ast_interpreter/err_fun_undeclared.expected
<string>:2:5: error: undeclared function "foo"
    foo();
    ^^^
